# MNR

./: CMakeLists.txt  main.c  readme.md
include/common/: types.h
include/gfx/: buffer.h  mesh.h  shader.h
include/glad/: glad.h
include/io/: fileio.h
include/math/: mat4.h  vec3.h
res/: default-fsh.glsl  default-vsh.glsl
src/: CMakeLists.txt  buffer.c  fileio.c  glad.c  mat4.c  shader.c  vec3.c
